--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -1,26 +1,25 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --brand-background: rgb(221, 237, 252);
+  --brand-color: rgb(6, 54, 70);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --brand-background: rgb(11, 7, 53);
+    --brand-color: rgb(223, 229, 235);
   }
 }
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 100dvw;
   min-height: 100dvh;
   overflow-x: hidden;
+  background-color: var(--brand-background);
+  color: var(--brand-color);
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
